# theotui

./: Cargo.toml  README.md
.github/: README.md
theoinf/: Cargo.toml  README.md
theoinf/src/: dfa.rs  lib.rs  propositional_logic.rs  set_theory.rs
theotui/: Cargo.toml  README.md
theotui/src/: main.rs  model.rs  update.rs  view.rs
